crates/pgls_pretty_print/tests/snapshots/single/tests__unary_operator_spacing_0_80.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/single/unary_operator_spacing_0.sql
snapshot_kind: text
---
select - -a, - -a, @ -a, @ -5, ~ -a, - +a, 1.5, a - -b;
