crates/pgls_pretty_print/tests/snapshots/single/tests__update_multi_assign_0_100.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/single/update_multi_assign_0_100.sql
snapshot_kind: text
---
UPDATE accounts
SET (balance, updated_at) = (balance + delta, NOW())
FROM adjustments
WHERE
  accounts.id = adjustments.account_id;
