crates/pgls_pretty_print/tests/snapshots/single/tests__update_stmt_0_100.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/single/update_stmt_0.sql
snapshot_kind: text
---
UPDATE users SET name = 'Jane Doe' WHERE id = 1;
