crates/pgls_pretty_print/tests/snapshots/single/tests__update_with_cte_returning_0_100.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/single/update_with_cte_returning_0_100.sql
snapshot_kind: text
---
WITH pending AS (
  SELECT id FROM invoices WHERE status = 'pending'
)
UPDATE invoices AS inv
SET status = 'processed'
FROM pending
WHERE
  inv.id = pending.id
RETURNING inv.id,
inv.status;
